[Spark Connector] Write support for creating Pinot segments (#13748)
* Stub for Spark write interface implementation

* Some further scaffolding for testing write api

* Implement basic segment generation logic with auto schema translation

* Fix tar.gz creation path

* Improve test coverage

* Refactor and add more test coverage

* Whitespace

* Add multi value column support

* Separate reader and writer integration tests

* Add support multi-value column support

* Add test coverage for the segment writer

* Add customizable segment name formatter

* Fix default segment name format

* Address review comments

* Add documentation with "experimental" notice

* Update warning box in write docs

* Add TODO for honoring fieldsToRead in PinotBufferedRecordReader

* Add Apache License to the documentation file

* Stub for Spark write interface implementation

* Some further scaffolding for testing write api

* Implement basic segment generation logic with auto schema translation

* Fix tar.gz creation path

* Improve test coverage

* Refactor and add more test coverage

* Whitespace

* Add multi value column support

* Separate reader and writer integration tests

* Add support multi-value column support

* Add test coverage for the segment writer

* Add customizable segment name formatter

* Fix default segment name format

* Address review comments

* Add documentation with "experimental" notice

* Update warning box in write docs

* Add TODO for honoring fieldsToRead in PinotBufferedRecordReader

* Add Apache License to the documentation file

* Fix library usage updated by rebase

* Update github test runner config to fix jdk21 encapsulation related issues

* Allow test access to java.net package in JDK21

* Fix gh test config

* Update pom file to account for running tests with jdk21 encapsulation

* Add jdk21 related fixes to gh test runner config

* Add nio package to jdk21 encaps